@@ -321,6 +321,9 @@
 /* Define if you want to detect a running instance */
 #define HAVE_SOCKET 1
 
-/* Define if GIO should be used, we don't use GIO on Windows */
-/* #define HAVE_GIO 1 */
+/* Define if GIO should be used */
+#define HAVE_GIO 1
+
+/* Define if include regex library should be used */
+#define USE_INCLUDED_REGEX 1
 
