@@ -1,3 +1,10 @@
+2010-11-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * win32-config.h:
+   Enable GIO and built-in regex support on Windows
+   when compiling without Waf.
+
+
 2010-11-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * geany_private.rc:
